# flask-practice

./: application.py  consume_api.py  pyproject.toml  readme.md  requirements.txt
